--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ footer-links:
   facebook:
   flickr:
   github: S2rin.github.io
-  instagram:
+  instagram: hyeok_surin/
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
@@ -41,13 +41,13 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: http://S2rin.github.io
+url: http://github.com/S2rin
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: "/S2rin"
 
 #
 # !! You don't need to change any of the configuration flags below !!
