--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ footer-links:
   facebook:
   flickr:
   github: S2rin.github.io
-  instagram: https://www.instagram.com/hyeok_surin/
+  instagram: hyeok_surin
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
