--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: S2rin
 description: Developer Study Gachon Univ.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: images/HITLAB.png
+avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/HITLAB.png
 
 #
 # Flags below are optional
